<resources>
    <string name="app_name">Timetable</string>

    <string name="nothing" />

    <string name="timetable_button_text">My Timetable</string>
    <string name="events_button_text">Events</string>
    <string name="year_structure_button_text">Year\'s structure</string>

    <string name="year_structure_activity_title">Year\'s structure</string>
    <string name="events_activity_title">Events</string>
    <string name="add_subject_activity_title">New Subject</string>
    <string name="edit_subject_activity_title">Edit Subject</string>

    <string name="choose_timetable_view_timetable">Choose timetable</string>
    <string name="new_reminder_view_reminders">New Reminder</string>
    <string name="remainders_view_timetable">Todo lists</string>
    <string name="overflow_view_timetable">Overflow</string>
    <string name="year_structure_view_timetable">Change year\'s structure</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="even_only">Even weeks only</string>
    <string name="odd_only">Odd weeks only</string>
    <string name="both">Both even and odd weeks</string>

    <string name="lecture">Lecture</string>
    <string name="seminar">Seminar</string>
    <string name="laboratory">Laboratory</string>
    <string name="other">Other</string>
    <string name="break_time">Break Time</string>
    <string name="holiday_time">Holiday Time</string>

    <string name="subjectName_activity_add_subject_hint">Subject\'s name (required)</string>
    <string name="subjectName_activity_add_subject_error">Field required!</string>
    <string name="subjectInfo_activity_add_subject_hint">Subject\'s description</string>

    <string name="teacherNameLectures_activity_add_subject_hint">Lecture Teacher\'s name</string>
    <string name="locationLectures_activity_add_subject_hint">Lecture Location</string>
    <string name="infoLectures_activity_add_subject_hint">Lecture Description</string>
    <string name="teacherNameSeminars_activity_add_subject_hint">Seminar Teacher\'s name</string>
    <string name="locationSeminars_activity_add_subject_hint">Seminar Location</string>
    <string name="infoSeminars_activity_add_subject_hint">Seminar Description</string>
    <string name="teacherNameLaboratories_activity_add_subject_hint">Laboratory Teacher\'s name</string>
    <string name="locationLaboratories_activity_add_subject_hint">Laboratory Location</string>
    <string name="infoLaboratories_activity_add_subject_hint">Laboratory Description</string>
    <string name="teacherNameOthers_activity_add_subject_hint">Teacher\'s name</string>
    <string name="locationOthers_activity_add_subject_hint">Location</string>
    <string name="infoOthers_activity_add_subject_hint">Description</string>

    <string name="newClassLectures_activity_add_subject_hint">Add new lecture</string>
    <string name="newClassSeminars_activity_add_subject_hint">Add new seminar</string>
    <string name="newClassLaboratories_activity_add_subject_hint">Add new laboratory</string>
    <string name="newClassOthers_activity_add_subject_hint">Add new time interval</string>
    <string name="save_activity_add_subject_hint">Save</string>

    <string name="differentTimetableEvenWeekCheckBox_activity_add_subject">Different timetable in even weeks</string>
    <string name="lecturesCheckBox_activity_add_subject">Add Lectures Time</string>
    <string name="seminarsCheckBox_activity_add_subject">Add Seminars Time</string>
    <string name="laboratoriesCheckBox_activity_add_subject">Add Laboratories Time</string>
    <string name="othersCheckBox_activity_add_subject">Add Other Activities Time</string>

    <string name="titleInfo_dialog_add_reminder">Type in reminder\'s title (required):</string>
    <string name="detailsInfo_dialog_add_reminder">Type in reminder\'s details:</string>
    <string name="notificationInfo_dialog_add_reminder">Notify me:</string>
    <string name="deadlineInfo_dialog_add_reminder">Set a deadline</string>
    <string name="deadline_default_dialog_add_reminder">Not set yet</string>
    <string name="deadline_dialog_add_reminder">%02d.%02d.%d %02d:%02d</string>
    <string name="change_deadline_button_dialog_add_reminder">Change deadline</string>
    <string name="save_dialog_add_reminder">Save</string>
    <string name="no_title_error_dialog_add_reminder">No title provided!</string>
    <string name="no_deadline_error_dialog_add_reminder">Deadline not set!</string>

    <string name="location_dialog_add_class">Type in location (required):</string>
    <string name="day_dialog_add_class">Choose the day of week for the activity:</string>
    <string name="start_hour_dialog_add_class">Choose a start hour for the activity: %d</string>
    <string name="finish_hour_dialog_add_class">Choose a finish hour for the activity: %d</string>
    <string name="frequency_dialog_add_class">Choose frequency for the activity:</string>
    <string name="frequency_even_dialog_add_class">For even weeks only</string>
    <string name="frequency_odd_dialog_add_class">For odd weeks only</string>
    <string name="frequency_both_dialog_add_class">Each week</string>
    <string name="save_dialog_add_class">Save</string>
    <string name="wrong_starting_ending_hours_error">Bad input! Ending hour before starting hour!</string>
    <string name="no_location_error">No location provided!</string>

    <string name="button_select_date_description">Select date</string>

    <string name="start_day_dialog_add_holiday">Choose the first day of the holiday (must be a Monday):\n\n\t\t\t%02d.%02d.%d</string>
    <string name="end_day_dialog_add_holiday">Choose the last day of the holiday (must be a Sunday):\n\n\t\t\t%02d.%02d.%d</string>
    <string name="working_week_dialog_add_holiday">Holiday during working week\n(this holiday DOES NOT alter week numbering)</string>
    <string name="save_dialog_add_holiday">Save</string>
    <string name="error_not_monday_add_holiday">Must be a Monday!</string>
    <string name="error_not_sunday_add_holiday">Must be a Sunday!</string>

    <string name="choose_dialog_add_holiday">Save</string>

    <string name="semester_duration_year_structure">Number of weeks in semester:</string>
    <string name="starting_date_year_structure">First day of the semester\n(must be a Monday):\n\n\t\t\t%02d.%02d.%d</string>
    <string name="error_not_monday_starting_date_year_structure">Must be a Monday!</string>
    <string name="subjects_year_structure">Subjects during the semester:</string>
    <string name="add_subjects_year_structure">Add new subject</string>
    <string name="holidays_year_structure">Holidays during the semester:</string>
    <string name="add_holidays_year_structure">Add new holiday</string>

    <string name="location_item_class_interval">Location: %s</string>
    <string name="starting_hour_item_class_interval">Starts at: %d</string>
    <string name="ending_hour_item_class_interval">Ends at: %d</string>

    <string name="deadline_item_reminder">Deadline: %02d.%02d.%02d %02d:%02d</string>
    <string name="notification_item_reminder">Notify me: %s</string>
    <string name="details_item_reminder">Details: %s</string>
    <string name="no_deadline_item_reminder">No deadline</string>

    <string name="working_week_item_holiday">Working week</string>
    <string name="holiday_week_item_holiday">Holiday week</string>
    <string name="start_date_item_holiday">Starts at: %02d.%02d.%d</string>
    <string name="end_date_item_holiday">Ends at: %02d.%02d.%d</string>
    <string name="wrong_starting_ending_dates_error">Bad input! Ending date before starting date!</string>

    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_current_week">Current week</string>
    <string name="popup_even_week">Even weeks</string>
    <string name="popup_odd_week">Odd weeks</string>

    <string name="view_timetable_activity_title_current_week">Timetable (Week %d)</string>
    <string name="view_timetable_activity_title_even_week">Timetable (Even Weeks)</string>
    <string name="view_timetable_activity_title_odd_week">Timetable (Odd Weeks)</string>
    <string name="view_timetable_activity_title_holiday_week">Timetable (Holiday)</string>

    <string name="start_timetable_entry">%02d:00</string>
    <string name="type_timetable_entry">(%s)</string>
    <string name="location_timetable_entry">Location: %s</string>
    <string name="end_timetable_entry">%02d:00</string>

    <string name="type_timetable_entry_dialog">(%s)</string>
    <string name="subject_description_timetable_entry_dialog">Subject info: %s</string>
    <string name="teacher_timetable_entry_dialog">Teacher: %s</string>
    <string name="activity_description_timetable_entry_dialog">Activity info: %s</string>
    <string name="location_timetable_entry_dialog">Location: %s</string>
    <string name="day_timetable_entry_dialog">Day: %s</string>
    <string name="start_timetable_entry_dialog">Starts at: %02d:00</string>
    <string name="end_timetable_entry_dialog">Ends at: %02d:00</string>
    <string name="frequency_timetable_entry_dialog">Frequency: %s</string>

    <string name="title_view_reminders_lists_activity">ToDos</string>

    <string name="reminders_notification_channel_id">Reminders</string>
    <string name="reminders_notification_channel_name">Reminders\' notifications</string>

    <string name="reminders_notification_title">Reminder: %s</string>
    <string name="reminders_notification_content">Deadline: %02d.%02d.%02d %02d:%02d\n\nDetails: %s</string>
</resources>
