<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:visibility="visible">

    <TextView
        android:id="@+id/chooseDay_dialog_add_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_dialog_add_class"
        android:textColor="@color/dialogTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_dialog_add_class"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_border"
        android:entries="@array/weekDays"
        android:popupBackground="@color/backgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseDay_dialog_add_class" />

    <TextView
        android:id="@+id/chooseHolidayStart_dialog_add_holiday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/start_hour_dialog_add_class"
        android:textColor="@color/dialogTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_dialog_add_class" />

    <SeekBar
        android:id="@+id/startHour_dialog_add_class"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="23"
        android:progress="0"
        android:valueFrom="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseHolidayStart_dialog_add_holiday" />

    <TextView
        android:id="@+id/chooseHolidayEnd_dialog_add_holiday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/finish_hour_dialog_add_class"
        android:textColor="@color/dialogTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startHour_dialog_add_class" />

    <TextView
        android:id="@+id/chooseFrequency_dialog_add_class2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/frequency_dialog_add_class"
        android:textColor="@color/dialogTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishHour_dialog_add_class" />

    <SeekBar
        android:id="@+id/finishHour_dialog_add_class"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="23"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseHolidayEnd_dialog_add_holiday" />

    <RadioGroup
        android:id="@+id/frequency_dialog_add_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseFrequency_dialog_add_class2">

        <RadioButton
            android:id="@+id/frequency_both_dialog_add_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/frequency_both_dialog_add_class" />

        <RadioButton
            android:id="@+id/frequency_even_dialog_add_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequency_even_dialog_add_class" />

        <RadioButton
            android:id="@+id/frequency_odd_dialog_add_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequency_odd_dialog_add_class" />
    </RadioGroup>

    <Button
        android:id="@+id/save_dialog_add_class"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:gravity="center"
        android:text="@string/save_dialog_add_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequency_dialog_add_class" />

</androidx.constraintlayout.widget.ConstraintLayout>